--- a/index (7).html
+++ b/index (7).html
@@ -5,9 +5,9 @@
 <meta http-equiv='X-UA-Compatible' content='IE=edge'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title>Templet four</title>
-<link rel="stylesheet" href="C:\Users\49152\Desktop\CSS and HTML Project\Templet four\fremwork.css">
+<link rel="stylesheet" href="fremwork.css">
 <link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="Templet four\normallize.css">
+<link rel="stylesheet" href="normallize.css">
 <!-- font Awosam -->
 <link rel="stylesheet" href="all.min.css">
 <!-- Google fonts -->
@@ -29,37 +29,37 @@
                         </a>
                     </li>
                     <li>
-                        <a  class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href="file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/setting.html" target="_blank">
+                        <a  class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href="index.html" target="_blank">
                             <i class="fa-solid fa-gear"></i>
                             <span>Setting</span>                 
                         </a>
                     </li>
                     <li>
-                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/profile.html target="_blank">
+                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=index.html target="_blank">
                             <i class="fa-solid fa-user"></i>
                             <span>Profile</span>                 
                         </a>
                     </li>
                     <li>
-                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/Project.html target="_blank">
+                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=index.html target="_blank">
                             <i class="fa-solid fa-diagram-project"></i>
                             <span>Project</span>                 
                         </a>
                     </li>
                     <li>
-                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/Courses.html target="_blank">
+                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=index.html target="_blank">
                             <i class="fa-solid fa-graduation-cap"></i>
                             <span>Courses</span>                 
                         </a>
                     </li>
                     <li>
-                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/Frinds.html target="_blank">
+                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=index.html target="_blank">
                             <i class="fa-solid fa-hand-spock"></i>
                             <span>Friends</span>                 
                         </a>
                     </li>
                     <li>
-                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/File.html target="_blank">
+                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 pa-10" href=index.html target="_blank">
                             <i class="fa-regular fa-file"></i>
                             <span>File</span>                 
                         </a>
