--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta http-equiv='X-UA-Compatible' content='IE=edge'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title>Profile</title>
-<link rel="stylesheet" href="C:\Users\49152\Desktop\CSS and HTML Project\Templet four\fremwork.css">
+<link rel="stylesheet" href="fremwork.css">
 <link rel="stylesheet" href="main.css">
-<link rel="stylesheet" href="Templet four\normallize.css">
+<link rel="stylesheet" href="normallize.css">
 <!-- font Awosam -->
 <link rel="stylesheet" href="all.min.css">
 <!-- Google fonts -->
@@ -23,19 +23,19 @@
                 <h3 class=" po-relative txt-cent mr-to-0">Shebani</h3>
                 <ul id="ul">
                     <li>
-                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 " href="C:\Users\49152\Desktop\CSS and HTML Project\Templet four\templet four .html" target="_blank">
+                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 " href="C:\Users\49152\Desktop\CSS and HTML Project\Templet four\index.html" target="_blank">
                             <i class="fa-regular fa-chart-bar fa-fw"></i>
                             <span>Dashboard</span>                 
                         </a>
                     </li>
                     <li>
-                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 " href="file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/setting.html" target="_blank">
+                        <a class=" d-flex ali-cent  fs-14 col-blk rid-6 " href="file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/index.html" target="_blank">
                             <i class="fa-solid fa-gear"></i>
                             <span>Setting</span>                 
                         </a>
                     </li>
                     <li>
-                        <a class="Aktive d-flex ali-cent  fs-14 col-blk rid-6 " href=file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/profile.html target="_blank">
+                        <a class="Aktive d-flex ali-cent  fs-14 col-blk rid-6 " href=file:///C:/Users/49152/Desktop/CSS%20and%20HTML%20Project/Templet%20four/index.html target="_blank">
                             <i class="fa-solid fa-user"></i>
                             <span>Profile</span>                 
                         </a>
